--- a/index.html
+++ b/index.html
@@ -3,26 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The WWW Virtual Library</title>
+<title>SQ@portal</title>
 <script type="text/javascript" language="JavaScript">
 <!-- // I don't want to be framed
 if (top != self)
 top.location = self.location
 //-->
 </script>
-<link rel="stylesheet" href="http://vlib.org/style/VL" type="text/css" />
 </head>
 <body>
-<p align="right" class="change">
-<font size="1">The WWW Virtual Library :  <span style="color:#ff0000;">en</span> &middot; <a href="index.es.html" class="linkbut" title=" Español">es</a> &middot; <a href="index.fr.html" class="linkbut" title="en Français">fr</a> &middot; <a href="index.zh.html" class="linkbut" title=" 漢語資源">zh</a></font></p>
-<a href="http://vlib.org/"><img src="/images/VL" alt="VL logo ©" border="0" align="left" />
-<img src="/images/VL" alt="VL logo ©" border="0" align="right" /></a>
+<a href="index.html"><img src="https://raw.githubusercontent.com/piper-AI/sqatnews/main/logoportsl.png" alt="SQ@portal" style="width:300px;height:93px;" border="0" align="left" />
 <br clear="all" />
-<h1 align="center">The WWW Virtual Library</h1>
 <h3></h3>
-<div align="right"><form method="get" action="http://vlsearch.org/VLsearch">
-<b>Quick search: <input type="text" size="20" name="q" /></b>
-</form></div>
 <table class="index"><tr><td valign="top"><table class="index">
 <tr><td> <ul>
 <li><b><a href="Agriculture.html">Agriculture</a></b><br /><small> Irrigation, Livestock, Poultry Science, …</small><br /> </li>
@@ -49,7 +41,6 @@ top.location = self.location
 | <a href="admin/donors.html">Donors</a> | <a href="http://www.vlib.org/topics/">Topics</a></p>
 <p class="background"><small class="update">Pages updated on Tuesday, February 21, 2017 - 0:02:41 GMT .<br />These pages are produced automatically from a <a href="index.html">topic map</a> of the VL/Virtual Library.<br />
 These pages and the database <a href="http://vlib.org/admin/Copyright">© The WWW Virtual Library</a> (WWWVL) 1991-latest update.<br /> 
-All rights reserved, including <a href="http://vlib.org/admin/Copyright#dbrights">database rights</a>.
 <br />The WWW Virtual Library (‘The VL’) is an <i>association sans but lucratif</i> established in the Republic and Canton of Geneva.</small></p>
 </body></html>
 
