--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@ top.location = self.location
 <body>
 <a href="index.html"><img src="https://raw.githubusercontent.com/piper-AI/sqatnews/main/logoportsl.png" alt="SQ@portal" style="width:200px;height:70px;" border="0" align="left" />
 <br clear="all" />
+<hr>
 <h3></h3>
+<center>
 <table class="index"><tr><td valign="top"><table class="index">
 <tr><td> <ul>
 <li><b><a href="Agriculture.html">Agriculture</a></b><br /><small> Irrigation, Livestock, Poultry Science, …</small><br /> </li>
