--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ top.location = self.location
 </script>
 </head>
 <body>
-<a href="index.html"><img src="https://raw.githubusercontent.com/piper-AI/sqatnews/main/logoportsl.png" alt="SQ@portal" style="width:200px;height:70px;" border="0" align="left" />
+<a href="index.html"><img src="https://raw.githubusercontent.com/piper-AI/sqatnews/main/logoportsl.png" alt="SQ@portal" style="width:200px;height:70px;" border="0" align="left" /></a>
 <br clear="all" />
 <hr>
 <h3></h3>
