--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>SQ@portal</title>
-<script type="text/javascript" language="JavaScript">
-<!-- // I don't want to be framed
-if (top != self)
-top.location = self.location
-//-->
-</script>
+<style>
+BODY  {
+font-size: 12px;
+font-family: Verdana, Arial, Helvetica, sans-serif;
+background-color: white;	
+margin-top: 15px;
+margin-left: 10%;
+margin-right: 10%;
+}
+</style>
 </head>
 <body>
 <a href="index.html"><img src="https://raw.githubusercontent.com/piper-AI/sqatnews/main/logoportsl.png" alt="SQ@portal" style="width:200px;height:70px;" border="0" align="left" /></a>
