--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ margin-right: 10%;
 <center>
 <table class="index"><tr><td valign="top"><table class="index">
 <tr><td> <ul>
-<li><b><a href="#" onclick="randomSite();" style="color:orange;">Lucky Find</a></b><br /></li>
-<li><b><a href="headlines.html">The Headlines</a></b><br /></li>
+<li><b><a href="#" onclick="randomSite();" style="color:orange;">Lucky Find</a></b><br /><br /></li>
+<li><b><a href="headlines.html">The Headlines</a></b><br /><br /></li>
 <li><b><a href="BusinessEconomics.html">Business and Economics</a></b><br /><small> Finance, Marketing, <a href="Transportation.html">Transportation</a>, …</small><br /> </li>
 <li><b><a href="Communication.html">Communications and Media</a></b><br /><small> Broadcasters, Publishers, Telecommunications, …</small><br /> </li>
 <li><b><a href="Computing.html">Computing and Computer Science</a></b><br /><small> Artificial Intelligence, Cryptography, Logic Programming, …</small><br /> </li>
