--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@ margin-right: 10%;
 <table class="index"><tr><td valign="top"><table class="index">
 <tr><td> <ul>
 <li><b><a href="#" onclick="randomSite();" style="color:orange;">Lucky Find</a></b><br /><br /></li>
-<li><b><a href="headlines.html">The Headlines</a></b><br /><br /></li>
-<li><b><a href="BusinessEconomics.html">Business and Economics</a></b><br /><small> Finance, Marketing, <a href="Transportation.html">Transportation</a>, …</small><br /> </li>
-<li><b><a href="Communication.html">Communications and Media</a></b><br /><small> Broadcasters, Publishers, Telecommunications, …</small><br /> </li>
-<li><b><a href="Computing.html">Computing and Computer Science</a></b><br /><small> Artificial Intelligence, Cryptography, Logic Programming, …</small><br /> </li>
-<li><b><a href="Education.html">Education</a></b><br /><small> Primary, Secondary, Tertiary, … </small><br /> </li>
-<li><b><a href="Engineering.html">Engineering</a></b><br /><small> <a href="Architecture.html">Architecture</a>, Electrical, Mechanical, …</small><br /> </li>
-<li><b><a href="Humanities.html">Humanities and Humanistic Studies</a></b><br /><small> <a href="History.html">History</a>, <a href="Languages.html">Languages and Linguistics</a>, <a href="Museums.html">Museums</a>, … </small><br /> </li>
+<li><b><a href="headlines.html">The Headlines</a></b><br /><small> It's Just news</small><br /></li>
+<li><b><a href="search.html">Search</a></b><br /><small> Explore</small><br /> </li>
+<li><b><a href="games.html">Games</a></b><br /><small> Have some fun</small><br /> </li>
+<li><b><a href="computer.html">Computers</a></b><br /><small> What's a computer?</small><br /> </li>
+<li><b><a href="shopping.html">Shopping</a></b><br /><small> If you have a credit card</small><br /> </li>
+<li><b><a href="social.html">Social Interaction</a></b><br /><small> Socialize without going outside</small><br /> </li>
+<li><b><a href="food.html">Food</a></b><br /><br /> </li>
 </ul></td></tr></table></td>
 <td valign="top"><table class="index"><tr><td><ul>
-<li><b><a href="InformationManagement.html">Information and Libraries</a></b><br /><small> Information Quality, Knowledge Management, Libraries, …</small><br /> </li>
-<li><b><a href="InternationalAffairs.html">International Affairs</a></b><br /><small> International Relations and Security, Sustainable Development, …</small><br /> </li>
-<li><b><a href="Law.html">Law</a></b><br /><small> Arbitration, Forensic Toxicology, Legal History, …</small><br /> </li>
-<li><b><a href="Science.html">Natural Sciences and Mathematics</a></b><br /><small> <a href="Biosciences.html">Biosciences</a>, <a href="EarthScience.html">Earth Science</a>, <a href="Medicine.html">Medicine and Health</a>, <a href="Physics.html">Physics</a>, …</small><br /> </li>
-<li><b><a href="Recreation.html">Recreation</a></b><br /><small> Gardening, Recreation and Games, Sport, …</small><br /> </li>
-<li><b><a href="Regional.html">Regional Studies</a></b><br /><small> African, <a href="AsianStudies.html">Asian</a>, Latin American, European, …</small><br /> </li>
-<li><b><a href="SocialSciences.html">Social and Behavioural Sciences</a></b><br /><small> Anthropology, <a href="Archaeology.html">Archaeology</a>, <a href="Development.html">Population and Development Studies</a>, …</small><br /> </li>
-<li><b><a href="Society.html">Society</a></b><br /><small> <a href="Peoples.html">Peoples</a>, <a href="Religion.html">Religion</a>, Gender Studies, …</small><br /> </li>
+<li><b><a href="knowledge.html">Knowledge</a></b><br /><small> Big Brain information</small><br /> </li>
+<li><b><a href="media.html">Media</a></b><br /><small> It's just entertainment</small><br /> </li>
+<li><b><a href="travel.html">Travel</a></b><br /><small> Go somewhere nice</small><br /> </li>
+<li><b><a href="mail.html">Mail</a></b><br /><small> Be careful what you send</small><br /> </li>
+<li><b><a href="sport.html">Sport</a></b><br /><small> For you football fans out there</small><br /> </li>
+<li><b><a href="languages.html">Languages</a></b><br /><small> Got a test?</small><br /> </li>
+<li><b><a href="money.html">Money and Finance</a></b><br /><small> Calm down crypto bro!</small><br /> </li>
+<li><b><a href="fashion.html">Fashion</a></b><br /><small> <a href="Peoples.html">Peoples</a>, <a href="Religion.html">Religion</a>, Gender Studies, …</small><br /> </li>
 </ul></td></tr>
 </table></td></tr></table>
 </body></html>
