--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@ margin-right: 10%;
 <center>
 <table class="index"><tr><td valign="top"><table class="index">
 <tr><td> <ul>
-<li><b><a href="#" onclick="randomSite();" style="color:orange;">Lucky Find</a></b><br /><small> Trick or treating, but with websites </small><br /></li>
-<li><b><a href="headlines.html">The Headlines</a></b><br /><small> It's Just news</small><br /></li>
+<li><b><a href="#" onclick="randomSite();" style="color:orange;">Lucky Find!!!???</a></b><br /><small> Trick or treating, but with websites </small><br /> </li>
+<li><b><a href="headlines.html">The Headlines</a></b><br /><small> It's Just news</small><br /> </li>
 <li><b><a href="search.html">Search</a></b><br /><small> Explore</small><br /> </li>
 <li><b><a href="games.html">Games</a></b><br /><small> Have some fun</small><br /> </li>
 <li><b><a href="computer.html">Computers</a></b><br /><small> What's a computer?</small><br /> </li>
 <li><b><a href="shopping.html">Shopping</a></b><br /><small> If you have a credit card</small><br /> </li>
 <li><b><a href="social.html">Social Interaction</a></b><br /><small> Socialize without going outside</small><br /> </li>
-<li><b><a href="food.html">Food</a></b><br /><br /> </li>
+<li><b><a href="food.html">Food</a></b><br /><small> Yum!!</small><br /> </li>
 </ul></td></tr></table></td>
 <td valign="top"><table class="index"><tr><td><ul>
 <li><b><a href="knowledge.html">Knowledge</a></b><br /><small> Big Brain information</small><br /> </li>
