--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ margin-right: 10%;
 <li><b><a href="sport.html">Sport</a></b><br /><small> For you football fans out there</small><br /> </li>
 <li><b><a href="languages.html">Languages</a></b><br /><small> Got a test?</small><br /> </li>
 <li><b><a href="money.html">Money and Finance</a></b><br /><small> Calm down crypto bro!</small><br /> </li>
-<li><b><a href="fashion.html">Fashion</a></b><br /><small> <a href="Peoples.html">Peoples</a>, <a href="Religion.html">Religion</a>, Gender Studies, …</small><br /> </li>
+<li><b><a href="fashion.html">Fashion</a></b><br /><small> Clothes, which look kinda dope</small><br /> </li>
 </ul></td></tr>
 </table></td></tr></table>
 </body></html>
