--- a/search.html
+++ b/search.html
@@ -166,7 +166,7 @@ font-weight: bold;
 <br clear="all" />
 <hr>
 <!--/title-->
-<h1 align="center"><span class="h20">SQ@portal</span><br />Headlines</h1>
+<h1 align="center"><span class="h20">SQ@portal</span><br />search</h1>
 <h3></h3>
 <tr><td><hr /></td></tr>
 <tr><td><table class="mems">
