--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The Headlines | SQ@portal</title>
+<title>search | SQ@portal</title>
 <style>
 BODY  {
 font-size: 12px;
