--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ margin-right: 10%;
 <li><b><a href="headlines.html">The Headlines</a></b><br /><small> It's just news?</small><br /> </li>
 <li><b><a href="search.html">Search</a></b><br /><small> Explore</small><br /> </li>
 <li><b><a href="games.html">Games</a></b><br /><small> Have some fun</small><br /> </li>
-<li><b><a href="computer.html">Computers</a></b><br /><small> What's a computer?</small><br /> </li>
+<li><b><a href="memes.html">Memes</a></b><br /><small> Things that make you LAUGH OUT LOUD><br /> </li>
 <li><b><a href="shopping.html">Shopping</a></b><br /><small> If you have a credit card</small><br /> </li>
 <li><b><a href="social.html">Social Interaction</a></b><br /><small> Socialize without going outside</small><br /> </li>
 <li><b><a href="food.html">Food</a></b><br /><small> Yum!!</small><br /> </li>
