--- a/search.html
+++ b/search.html
@@ -206,7 +206,7 @@ The trusted source of all the latest breaking news, sports, finance, entertainme
 <td class="mems"><a href="https://yandex.com" class="lh">Yandex</a></td>
 <td class="mems">
 <a href="https://yandex.com">Yandex</a><br />
-Yandex is a search engine and web portal. Yandex offers internet search and other services like maps, navigator, public transport, taxi, weather, news, ...<br />
+Yandex is an underrated webportal that can almost everything<br />
 <br />
 </td>
 </tr>
@@ -214,7 +214,7 @@ Yandex is a search engine and web portal. Yandex offers internet search and othe
 <td class="mems"><a href="https://duckduckgo.com/?kp=1" class="lh">DuckDuckGo</a></td>
 <td class="mems">
 <a href="https://duckduckgo.com/?kp=1">DuckDuckGo</a><br />
-DuckDuckGo is the Internet privacy company for everyone who's had enough of hidden online tracking and wants to take back their privacy now. For over a decade, ...<br />
+DuckDuckGo is a terrible search engine, seems targeted ads are kindof a good thing<br />
 <br />
 </td>
 </tr>
