--- a/knowledge.html
+++ b/knowledge.html
@@ -174,7 +174,7 @@ font-weight: bold;
 <td class="mems"><a href="https://en.wikipedia.org/wiki/Main_Page" class="lh">Wikipedia</a></td>
 <td class="mems">
 <a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a><br />
-Don;t believe your teachers, wikipedia is more credible than most of your text books<br />
+Don't believe your teachers, wikipedia is more credible than most of your text books<br />
 <br />
 </td>
 </tr>
