--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ margin-right: 10%;
 <body>
 <a href="index.html"><img src="https://raw.githubusercontent.com/piper-AI/sqatnews/main/logoportsl.png" alt="SQ@portal" style="width:200px;height:70px;" border="0" align="left" /></a>
 <br clear="all" />
+    <h3> Your guide to the web </h3>
 <hr>
 <h3></h3>
 <center>
