--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ margin-right: 10%;
 <li><b><a href="media.html">Media</a></b><br /><small> It's just entertainment</small><br /> </li>
 <li><b><a href="travel.html">Travel</a></b><br /><small> Go somewhere nice</small><br /> </li>
 <li><b><a href="mail.html">Mail</a></b><br /><small> Be careful what you send</small><br /> </li>
-<li><b><a href="sport.html">Sport</a></b><br /><small> For you football fans out there</small><br /> </li>
+<li><b><a href="https://www.fifa.com">Fifa</a></b><br /><small> For you football fans out there</small><br /> </li>
 <li><b><a href="languages.html">Languages</a></b><br /><small> Got a test?</small><br /> </li>
 <li><b><a href="money.html">Money and Finance</a></b><br /><small> Calm down crypto bro!</small><br /> </li>
 <li><b><a href="fashion.html">Fashion</a></b><br /><small> Clothes, which look kinda dope</small><br /> </li>
