--- a/headlines.html
+++ b/headlines.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+<meta name="apple-mobile-web-app-capable" content="yes" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The Headlines | SQ@portal</title>
 <style>
@@ -167,7 +168,7 @@ font-weight: bold;
 <hr>
 <!--/title-->
 <h1 align="center"><span class="h20">SQ@portal</span><br />Headlines</h1>
-<h3></h3>
+<h3>Updated at 7pm everyday</h3>
 <tr><td><hr /></td></tr>
 <tr><td><table class="mems">
 <tr>
